2012-02-28  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPrintPanel.m: Add file type chooser (PDF, PostScript)
	to save panel

2012-02-27  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSMenuItemCell.m (-titleRectForBounds:): Keep title rect
	inside cell bounds, to prevent drawing text outside of a
	NSPopUpButtonCell which has a label that is too long to fit.

2012-02-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindowController.m (-initWithWindow:): Set the owner to
	self and only call setDocument: if we have an actual window.

2012-02-24  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSImageRep.h: Add comment clarifying that -draw
	is a primitive method which subclasses should override.

2012-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-setFrameFromString:): Correct bug in
	handling of in-window menus.

2012-02-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSOpenPanel.m (-beginSheetForDirectory:...,
	-beginForDirectory:...): Replace calls to -_setupForTypes: by
	-setAllowedFileTypes:, as the former was removed from the super
	class NSSavePanel.

2012-02-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenu.m (-performActionForItemAtIndex:): Revert change
	from r34642. The action of a pop up menu item once again is chosen
	in preference to the action of the pop up button itself. This is
	how it has always worked on OS X.

	* Source/NSPopUpButtonCell.m (_popUpItemAction): Fix sender of the
	pop up button's action. It is now the pop up button itself and not
	the pop up button cell.

2012-02-18 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSGraphicsContext.h: Extend the enumerator
	NSCompositingOperation with the GNUstep specifc value
	GSCompositeHighlight.
	* Source/Functions.m (NSHighlightRect): Use GSCompositeHighlight
	instead of NSCompositeHighlight.

2012-02-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSGraphics.h: Add missing declaration for